--- a/website/src/module/main/index.less
+++ b/website/src/module/main/index.less
@@ -31,7 +31,7 @@
         background: @main-body-color;
         // margin-left: 280px;
         // min-height: 900px;
-        padding: 30px;
+        padding: 12px;
         overflow-y: auto;
         .ro-main-header {
             position: relative;
@@ -98,5 +98,9 @@
                 }
             }
         }
+    }
+
+    .ro-body-container {
+        margin-top: 15px;
     }
 }
