--- a/website/src/asset/css/index.less
+++ b/website/src/asset/css/index.less
@@ -3,7 +3,7 @@
 @import "./antd.less";
 @import "./global.less";
 
-#react-app {
+#react-app-root {
     background-color: @main-background-color;
     height: 100%;
 }
