--- a/website/src/asset/css/antd.less
+++ b/website/src/asset/css/antd.less
@@ -2,4 +2,12 @@
     .ant-menu-inline, .ant-menu-vertical, .ant-menu-vertical-left {
         border-right: none;
     }
+
+    .ant-menu-item {
+        padding: 0 calc(50% - 22px / 2);
+    }
+    
+    .ro-menu-icon {
+        font-size: 22px !important;
+    }
 }
