--- a/website/src/asset/css/antd.less
+++ b/website/src/asset/css/antd.less
@@ -3,11 +3,11 @@
         border-right: none;
     }
 
-    .ant-menu-item {
+    /* .ant-menu-item {
         padding: 0 calc(50% - 22px / 2);
     }
     
     .ro-menu-icon {
         font-size: 22px !important;
-    }
+    } */
 }
