--- a/website/src/asset/css/antd.less
+++ b/website/src/asset/css/antd.less
@@ -3,11 +3,18 @@
         border-right: none;
     }
 
-    /* .ant-menu-item {
-        padding: 0 calc(50% - 22px / 2);
+    .ant-table-container {
+        overflow-x: auto;
+        // padding: 20px 40px 20px 20px;
+
+        /* .text-overflow-ellipsis {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        } */
+
+        tr.ant-table-row:hover {
+            //background-color: red;
+        }
     }
-    
-    .ro-menu-icon {
-        font-size: 22px !important;
-    } */
 }
