--- a/website/src/asset/css/global.less
+++ b/website/src/asset/css/global.less
@@ -9,3 +9,11 @@
 .ro-justify-content {
     justify-content: center;
 }
+
+.ro-module-wrap {
+    // padding: 20px;
+    .ro-table-wrap {
+        padding: 20px 20px 0 20px;
+        background-color: white;
+    }
+}
