--- a/website/src/asset/css/normalize.less
+++ b/website/src/asset/css/normalize.less
@@ -1,6 +1,6 @@
 @import "variable";
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
@@ -12,7 +12,7 @@
 ::-webkit-scrollbar-thumb {
   border-radius: 100px;
   background: @main-light-text-color;
-}
+} */
 
 .g-theme {
   * {
