--- a/website/src/asset/css/normalize.less
+++ b/website/src/asset/css/normalize.less
@@ -56,13 +56,13 @@
     color: @main-light-text-color;
   }
 
-  button {
+  /* button {
     border: none;
     outline: none;
     background-color: transparent;
     cursor: pointer;
     padding: 0;
-  }
+  } */
 
   small {
     font-size: 100%;
