--- a/website/src/asset/css/antd.less
+++ b/website/src/asset/css/antd.less
@@ -17,4 +17,11 @@
             //background-color: red;
         }
     }
+
+    .ant-popover {
+        .ant-popover-title {
+            color: rgba(0, 0, 0, 0.85);
+            font-weight: 600;
+        }
+    }
 }
