--- a/website/src/module/table/component/TableComponent/index.less
+++ b/website/src/module/table/component/TableComponent/index.less
@@ -26,3 +26,15 @@
         margin-right: 10px;
     }
 }
+
+.react-resizable {
+    position: relative;
+}
+.react-resizable-handle {
+    position: absolute;
+    width: 10px;
+    height: 100%;
+    bottom: 0;
+    right: -5px;
+    cursor: col-resize;
+}
