--- a/website/src/asset/css/antd.less
+++ b/website/src/asset/css/antd.less
@@ -5,16 +5,10 @@
 
     .ant-table-container {
         overflow-x: auto;
-        // padding: 20px 40px 20px 20px;
-
-        /* .text-overflow-ellipsis {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        } */
-
-        tr.ant-table-row:hover {
-            //background-color: red;
+        
+        .ant-table-content {
+            max-height: 600px;
+            overflow-y: auto !important;
         }
     }
 
