--- a/website/src/module/login/component/index.less
+++ b/website/src/module/login/component/index.less
@@ -8,11 +8,13 @@
   // background-color: #010d11;
 
   .ro-login-vider-bg {
+    height: 100%;
+    width: 100%;
     position: fixed;
     right: 0;
-    left: 0;
-    top: 0;
     bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
   }
 
   .dv-loading {
