--- a/website/src/module/user/component/index.less
+++ b/website/src/module/user/component/index.less
@@ -12,7 +12,8 @@
         background-color: #252525;
         justify-content: center;
         align-items: center;
-
+        user-select: none;
+        
         > span {
             color: #e69800;
             font-weight: bold;
