--- a/fa-core/src/module/main/component/index.less
+++ b/fa-core/src/module/main/component/index.less
@@ -1,9 +1,11 @@
 .ro-websit-container {
   .ro-main-container {
     display: flex;
-    height: calc(100vh - 40px);
+    height: calc(100vh - 60px);
 
     .ro-main-menus {
+      width: 200px;
+
       > ul {
         height: 100%;
       }
@@ -11,6 +13,8 @@
 
     .ro-main-body {
       flex-grow: 1;
+      padding: 10px;
+      background-color: #e6e7ee;
     }
   }
 }
