--- a/fa-core/src/module/common/header/index.less
+++ b/fa-core/src/module/common/header/index.less
@@ -1,7 +1,23 @@
 .ro-header-container {
   display: flex;
   align-items: center;
-  background-color: #dee1e6;
+  background-color: #e6e7ee;
+  padding: 8px;
+  border-bottom: 1px solid #d1d9e6;
+
+  .ro-neu {
+    border-radius: 10px;
+    cursor: pointer;
+    background: linear-gradient(145deg, #dddee3, #dcdde2);
+    box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+    border: 1px solid #d1d9e6;
+
+    &:hover {
+      background-color: #e6e7ee;
+      border-color: #e6e7ee;
+      box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+    }
+  }
 
   > * {
     margin: 0 5px;
@@ -11,14 +27,8 @@
   [class~="anticon"] {
     height: 40px;
     width: 40px;
-    padding: 11px;
+    padding: 10px;
     font-size: 18px;
-
-    &:hover {
-      background-color: rgb(0 0 0 / 8%);
-      cursor: pointer;
-      border-radius: 5px;
-    }
   }
 
   .ro-nav-tabs-container {
@@ -26,6 +36,16 @@
   }
 
   .ro-profile {
+    span {
+      margin-left: 5px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 100px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
     img {
       margin-left: 5px;
       padding: 3px;
