--- a/fa-core/src/asset/less/variable.less
+++ b/fa-core/src/asset/less/variable.less
@@ -18,4 +18,4 @@
 @main-white-color: #fff;
 @main-gold-color: #f7cc83;
 
-@main-body-background-color: #eef0f8;
+@main-body-background-color: #f3f4f7;
