--- a/fa-core/src/module/common/header/index.less
+++ b/fa-core/src/module/common/header/index.less
@@ -1,14 +1,16 @@
+@import "~asset/less/variable";
+
 .ro-header-container {
   display: flex;
   align-items: center;
-  background-color: #e6e7ee;
+  background-color: @main-body-background-color;
   padding: 8px;
-  border-bottom: 1px solid #d1d9e6;
+  // border-bottom: 1px solid #d1d9e6;
 
   .ro-neu {
     border-radius: 10px;
     cursor: pointer;
-    background: linear-gradient(145deg, #dddee3, #dcdde2);
+    background: linear-gradient(145deg, #f3f4f7, #dee1ed);
     box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
     border: 1px solid #d1d9e6;
 
