--- a/fa-core/src/module/data-dictionary/component/index.less
+++ b/fa-core/src/module/data-dictionary/component/index.less
@@ -1,3 +1,16 @@
-.ro-example-component-container {
+.ro-data-dictionary-module-container {
+  display: flex;
 
+  .ro-tree-container {
+    width: 300px;
+
+    .ro-tree-add-btn {
+      margin-left: 45px;
+    }
+  }
+
+  .ro-table-container {
+    margin-left: 20px;
+    flex-grow: 1;
+  }
 }
