--- a/fa-core/src/module/main/component/index.less
+++ b/fa-core/src/module/main/component/index.less
@@ -16,7 +16,7 @@
 
     .ro-main-body {
       flex-grow: 1;
-      padding: 10px;
+      padding: 10px 20px 10px 10px;
       border: 1px solid #eeeef0;
       background-color: @main-body-background-color;
     //   background: linear-gradient(145deg, #f3f4f7, #dfe0e5);
