--- a/fa-core/src/module/common/header/index.less
+++ b/fa-core/src/module/common/header/index.less
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   background-color: @main-body-background-color;
-  padding: 8px;
+  padding: 8px 17px 8px 8px;
   // border-bottom: 1px solid #d1d9e6;
 
   .ro-neu {
