--- a/fa-core/src/asset/less/normalize.less
+++ b/fa-core/src/asset/less/normalize.less
@@ -65,13 +65,13 @@
     color: @main-light-text-color;
   }
 
-  button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-    padding: 0;
-  }
+  // button {
+  //   border: none;
+  //   outline: none;
+  //   background-color: transparent;
+  //   cursor: pointer;
+  //   padding: 0;
+  // }
 
   small {
     font-size: 100%;
