--- a/fa-core/src/asset/less/global.less
+++ b/fa-core/src/asset/less/global.less
@@ -3,7 +3,9 @@
 .g-theme {
   .ro-neu-card {
     box-shadow: 4px 4px 10px 0 rgb(0 0 0 / 8%), -5px -6px 10px 0 rgb(253 253 253 / 90%);
-    background-image: linear-gradient(to top, #f1f2f5, rgb(255 255 255 / 0%)), linear-gradient(to bottom, #f6f6f9, #f6f6f9);
+    background-image:
+      linear-gradient(to top, #f1f2f5, rgb(255 255 255 / 0%)),
+      linear-gradient(to bottom, #f6f6f9, #f6f6f9);
     border: 1px solid #eeeef0;
     border-radius: 10px;
   }
