--- a/ci/src/asset/less/global.less
+++ b/ci/src/asset/less/global.less
@@ -1,40 +1,5 @@
 @import "./variable";
 
-ul.ro-list-card {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-
-  > li {
-    height: 2.4rem;
-    background-color: #fff;
-    margin-top: 0.05rem;
-    padding: 0 0.5rem;
-
-    /* line-height: 2.4rem; */
-  }
-
-  &.ro-flex-ul {
-    > li {
-      display: flex;
-      align-items: center;
-    }
-  }
-
-  &.ro-list-input {
-    input {
-      height: 2rem;
-      flex-grow: 1;
-      margin-left: 1rem;
-      text-align: right;
-    }
-
-    label {
-      color: #101010;
-    }
-  }
-}
-
 .ro-flex {
   display: flex;
 
@@ -58,4 +23,10 @@ ul.ro-list-card {
   .ro-grow {
     flex-grow: 1;
   }
+}
+
+.text-overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
