--- a/ci/src/asset/less/normalize.less
+++ b/ci/src/asset/less/normalize.less
@@ -1,7 +1,7 @@
 @import "variable";
 
 html {
-  font-size: 20px;
+  font-size: 14px;
 }
 
 body {
@@ -13,8 +13,8 @@ body {
 
 .g-theme {
   ::-webkit-scrollbar {
-    width: 0.3rem;
-    height: 0.3rem;
+    width: 6px;
+    height: 6px;
   }
 
   ::-webkit-scrollbar-track {
@@ -22,7 +22,7 @@ body {
   }
 
   ::-webkit-scrollbar-thumb {
-    border-radius: 5rem;
+    border-radius: 100px;
     background: @main-light-text-color;
   }
 
@@ -53,30 +53,9 @@ body {
     margin: 0;
   }
 
-  input {
-    border: none;
-    outline: none;
-    text-indent: 0.5rem;
-    border-radius: 0.2rem;
-    height: 2rem;
-    font-size: 0.7rem;
-  }
-
-  input::placeholder {
-    color: @main-input-plactholder-color;
-  }
-
-  button {
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 0;
-    font-size: 0.7rem;
-  }
-
   small {
     font-size: 100%;
-    transform: scale(0.76) translate(-0.1rem, 0.05rem);
+    transform: scale(0.76) translate(-2px, 1px);
     display: inline-block;
   }
 
