--- a/ci/src/module/common/header/component/index.less
+++ b/ci/src/module/common/header/component/index.less
@@ -7,6 +7,19 @@
   color: rgb(0 0 0 / 85%);
   line-height: 46px;
   background: #191919;
+  user-select: none;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #3d3d3d;
+    left: 0;
+    bottom: 0;
+    z-index: 99999;
+  }
 
   .ro-header-logo {
     padding-left: 20px;
@@ -43,7 +56,15 @@
       transition: color 200ms;
       flex-shrink: 0;
       box-sizing: border-box;
-      cursor: pointer;
+
+      &.active {
+        color: hsl(0deg 0% 100% / 90%);
+        z-index: 9999;
+
+        .ro-tab-trapezoid {
+          background-color: #3d3d3d;
+        }
+      }
 
       &:hover {
         color: rgb(255 255 255 / 90%);
@@ -51,6 +72,7 @@
 
       &:not(:first-child) {
         margin-left: -20px;
+        cursor: move;
       }
     }
 
@@ -58,13 +80,17 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      top: 0;
+      top: 1px;
       left: 0;
       background-color: #282828;
       border-radius: 8px 8px 0 0;
       transform: rotateX(10deg);
       transform-origin: 50% 100%;
       box-shadow: 0 0 2px 3px rgb(0 0 0 / 20%);
+
+      &:hover {
+        background-color: #2f2f2f;
+      }
     }
 
     .ro-tab-title {
@@ -85,7 +111,12 @@
       padding: 0 5px;
       font-size: 14px;
       height: 28px;
-      line-height: 28px;
+      line-height: 30px;
+
+      &:hover {
+        color: #fff;
+        cursor: pointer;
+      }
     }
   }
 }
