--- a/ci/src/module/common/header/component/index.less
+++ b/ci/src/module/common/header/component/index.less
@@ -38,85 +38,88 @@
 
   .ro-header-tabs {
     color: rgb(255 255 255 / 90%);
+  }
+}
 
-    .ro-header-tab-item {
-      width: 140px;
-      height: 38px;
-      perspective: 20px;
-      position: relative;
-      color: rgb(255 255 255 / 36%);
-      font-size: 12px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding-top: 8px;
-      padding-left: 20px;
-      padding-right: 30px;
-      transition: color 200ms;
-      flex-shrink: 0;
-      box-sizing: border-box;
+.ro-header-tab-item-g {
+  width: 140px;
+  height: 38px;
+  perspective: 20px;
+  position: relative;
+  color: rgb(255 255 255 / 36%);
+  font-size: 12px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 8px;
+  padding-left: 20px;
+  padding-right: 30px;
+  transition: color 200ms;
+  flex-shrink: 0;
+  box-sizing: border-box;
 
-      &.active {
-        color: hsl(0deg 0% 100% / 90%);
-        z-index: 9999;
-
-        .ro-tab-trapezoid {
-          background-color: #3d3d3d;
-        }
-      }
-
-      &:hover {
-        color: rgb(255 255 255 / 90%);
-      }
-
-      &:not(:first-child) {
-        margin-left: -20px;
-        cursor: move;
-      }
-    }
+  &.active {
+    color: hsl(0deg 0% 100% / 90%);
+    z-index: 9999;
 
     .ro-tab-trapezoid {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 1px;
-      left: 0;
-      background-color: #282828;
-      border-radius: 8px 8px 0 0;
-      transform: rotateX(10deg);
-      transform-origin: 50% 100%;
-      box-shadow: 0 0 2px 3px rgb(0 0 0 / 20%);
-
-      &:hover {
-        background-color: #2f2f2f;
-      }
-    }
-
-    .ro-tab-title {
-      position: relative;
-      z-index: 99;
-      height: 16px;
-      line-height: 16px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-
-    .anticon {
-      position: absolute;
-      right: 14px;
-      color: rgb(255 255 255 / 50%);
-      z-index: 100;
-      padding: 0 5px;
-      font-size: 14px;
-      height: 28px;
-      line-height: 30px;
-
-      &:hover {
-        color: #fff;
-        cursor: pointer;
-      }
+      background-color: #3d3d3d;
     }
   }
+
+  &:hover {
+    color: rgb(255 255 255 / 90%);
+  }
+
+  &:not(:first-child) {
+    margin-left: -20px;
+  }
+
+  .ro-tab-trapezoid {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 1px;
+    left: 0;
+    background-color: #282828;
+    border-radius: 8px 8px 0 0;
+    transform: rotateX(10deg);
+    transform-origin: 50% 100%;
+    box-shadow: 0 0 2px 3px rgb(0 0 0 / 20%);
+
+    &:hover {
+      background-color: #2f2f2f;
+    }
+  }
+
+  .ro-tab-title {
+    position: relative;
+    z-index: 99;
+    height: 16px;
+    line-height: 16px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  .anticon {
+    position: absolute;
+    right: 14px;
+    color: rgb(255 255 255 / 50%);
+    z-index: 100;
+    padding: 0 5px;
+    font-size: 14px;
+    height: 28px;
+    line-height: 30px;
+
+    &:hover {
+      color: #fff;
+      cursor: pointer;
+    }
+  }
+}
+
+.ro-header-tab-help-sort {
+  z-index: 9998 !important;
 }
