--- a/ci/src/module/common/header/component/index.less
+++ b/ci/src/module/common/header/component/index.less
@@ -1,6 +1,6 @@
 @import "~asset/less/variable";
 
-.ro-header-container {
+.ro-header-module {
   height: 46px;
   z-index: 120;
   position: relative;
