--- a/ci/src/asset/less/normalize.less
+++ b/ci/src/asset/less/normalize.less
@@ -1,13 +1,13 @@
 @import "variable";
 
 html {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 body {
   margin: 0;
   background-color: @main-background-color;
-  font-size: 0.7rem;
+  font-size: 12px;
   height: 100%;
 }
 
@@ -73,5 +73,11 @@ body {
   menu {
     margin: 0;
     padding: 0;
+  }
+
+  button {
+    min-width: 60px;
+    margin: 0 5px;
+    font-size: 12px;
   }
 }
