--- a/ci/src/module/common/main/component/index.less
+++ b/ci/src/module/common/main/component/index.less
@@ -1,1 +1,13 @@
 @import "~asset/less/variable";
+
+.ro-main-body {
+  height: calc(100vh - 48px);
+  display: flex;
+
+  > main {
+    flex-grow: 1;
+    background-color: #fff;
+    border-radius: 5px;
+    margin: 5px 5px 0;
+  }
+}
