--- a/ci/src/asset/less/index.less
+++ b/ci/src/asset/less/index.less
@@ -1,4 +1,4 @@
 @import "./variable";
-@import "antd/dist/antd.min.css";
+@import "antd/dist/antd.less";
 @import "./normalize";
 @import "./global";
