--- a/ci/src/module/login/component/index.less
+++ b/ci/src/module/login/component/index.less
@@ -4,26 +4,26 @@
 
   .ro-logo {
     text-align: center;
-    padding-top: 8rem;
+    padding-top: 160px;
 
     img {
-      height: 1.5rem;
+      height: 30px;
     }
   }
 
   .ro-login-container {
     display: flex;
-    margin-top: 3rem;
+    margin-top: 60px;
     align-items: center;
     flex-direction: column;
 
     input,
     button {
-      height: 2rem;
-      width: 15rem;
-      margin-top: 1rem;
+      height: 40px;
+      width: 300px;
+      margin-top: 20px;
       flex-shrink: 0;
-      border-radius: 0.2rem;
+      border-radius: 10px;
     }
 
     input {
@@ -32,7 +32,7 @@
 
     button {
       background: #fcca00;
-      margin-top: 1.6rem;
+      margin-top: 32px;
       color: #fff;
     }
   }
