--- a/ci/src/components/page-modal/index.less
+++ b/ci/src/components/page-modal/index.less
@@ -1,5 +1,12 @@
 .ro-ro-page-modal {
   color: initial;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: 0;
+  background: #00000073;
+  z-index: 10000;
 }
 
 .ro-page-modal-container {
