--- a/ci/src/components/page-modal/index.less
+++ b/ci/src/components/page-modal/index.less
@@ -1,11 +1,11 @@
-.ro-ro-page-modal {
+.ro-page-modal {
   color: initial;
   position: absolute;
   top: -5px;
   left: -5px;
   right: -5px;
   bottom: 0;
-  background: #00000073;
+  background: rgba(0, 0, 0, 0.30);
   z-index: 10000;
 }
 
