--- a/ci/src/module/common/main/component/index.less
+++ b/ci/src/module/common/main/component/index.less
@@ -10,4 +10,12 @@
     border-radius: 5px;
     margin: 5px 5px 0;
   }
+
+  .ro-module-body {
+    position: relative;
+  }
+}
+
+.ro-main-container {
+  height: 100vh;
 }
