--- a/ci/src/components/page-modal/index.less
+++ b/ci/src/components/page-modal/index.less
@@ -1,4 +1,4 @@
-.ro-page-drag-panel {
+.ro-page-drag-panel-masx {
   color: initial;
   position: absolute;
   top: -5px;
@@ -27,6 +27,10 @@
       width: 40px;
       line-height: 40px;
       cursor: pointer;
+
+      &:hover {
+        background: rgb(255 255 255 / 10%);
+      }
     }
   }
 }
