--- a/ci/src/components/page-modal/index.less
+++ b/ci/src/components/page-modal/index.less
@@ -7,6 +7,9 @@
   bottom: 0;
   background: rgb(0 0 0 / 30%);
   z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .ro-drag-header {
     display: flex;
