[fix]:解决弹窗问题

--- a/ci/src/module/common/menus/component/index.less
+++ b/ci/src/module/common/menus/component/index.less
@@ -3,12 +3,31 @@
 .ro-meuns-module {
   color: inherit;
   max-width: 200px;
-  flex: 1 0;
   background: #fff;
-  overflow-y: auto;
   box-shadow: 0 1px 4px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 12%);
 
-  &::-webkit-scrollbar {
-    width: 0;
+  &.collapsed {
+    flex-grow: 1;
+  }
+
+  .ro-meuns-container {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    min-width: 80px;
+    max-height: calc(100% - 48px);
+
+    &::-webkit-scrollbar {
+      width: 0;
+    }
+  }
+
+  .ro-meuns-collapsed {
+    height: 48px;
+    border-top: 1px solid #e1e1e1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    user-select: none;
   }
 }
