--- a/ci/src/module/common/menus/component/index.less
+++ b/ci/src/module/common/menus/component/index.less
@@ -5,6 +5,7 @@
   max-width: 200px;
   background: #fff;
   box-shadow: 0 1px 4px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 12%);
+  position: relative;
 
   &.collapsed {
     flex-grow: 1;
@@ -29,5 +30,9 @@
     justify-content: center;
     cursor: pointer;
     user-select: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
