--- a/ci/src/module/common/header/component/index.less
+++ b/ci/src/module/common/header/component/index.less
@@ -108,14 +108,16 @@
     right: 14px;
     color: rgb(255 255 255 / 50%);
     z-index: 100;
-    padding: 0 5px;
-    font-size: 14px;
-    height: 28px;
-    line-height: 30px;
+    font-size: 16px;
+    height: 16px;
+    width: 16px;
+    margin-right: 2px;
+    border-radius: 2px;
 
     &:hover {
-      color: #fff;
+      color: #9d9b9b;
       cursor: pointer;
+      background-color: #646262;
     }
   }
 }
