--- a/ci/src/asset/less/global.less
+++ b/ci/src/asset/less/global.less
@@ -30,6 +30,10 @@
     .ro-grow {
       flex-grow: 1;
     }
+
+    &.ro-height-100 {
+      height: 100%;
+    }
   }
 
   .text-overflow-ellipsis {
