--- a/ci/src/components/common/index.less
+++ b/ci/src/components/common/index.less
@@ -7,9 +7,11 @@
   bottom: 0;
   z-index: 1000;
 
-  a.ro-a-action {
+  p.ro-a-action {
     color: #1890ff;
     margin-left: 10px;
+    text-align: center;
+    cursor: pointer;
 
     &:hover {
       color: #1890ff;
