--- a/ci/src/module/common/menus/component/index.less
+++ b/ci/src/module/common/menus/component/index.less
@@ -2,13 +2,15 @@
 
 .ro-meuns-module {
   color: inherit;
-  max-width: 200px;
+  width: 80px;
   background: #fff;
   box-shadow: 0 1px 4px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 12%);
   position: relative;
+  flex-shrink: 0;
+  flex-grow: 0;
 
   &.collapsed {
-    flex-grow: 1;
+    width: 200px;
   }
 
   .ro-meuns-container {
