--- a/ci/src/asset/less/global.less
+++ b/ci/src/asset/less/global.less
@@ -1,7 +1,7 @@
 @import "./variable";
 
 .g-theme {
-  button {
+  button[class~="ant-btn"] {
     min-width: 60px;
     margin-left: 10px;
     font-size: 12px;
