--- a/ci/src/components/page-table/index.less
+++ b/ci/src/components/page-table/index.less
@@ -1,4 +1,17 @@
 .ro-page-table {
   color: inherit;
   padding: 0 10px;
+  height: 100%;
+}
+
+.ro-page-header {
+  display: flex;
+  border-bottom: 1px solid #eee;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+
+  .ro-header-btns {
+    display: flex;
+  }
 }
