--- a/ci/src/asset/less/antd.overwrite.less
+++ b/ci/src/asset/less/antd.overwrite.less
@@ -2,4 +2,10 @@
   .ant-formily-item-feedback-layout-loose {
     margin-bottom: 1px;
   }
+
+  .ant-table-container {
+    .ant-table-body {
+      overflow-y: auto !important;
+    }
+  }
 }
