[refactor]: 优化路由问题

--- a/ci/src/module/common/main/component/index.less
+++ b/ci/src/module/common/main/component/index.less
@@ -34,3 +34,12 @@
 .ro-main-container {
   height: 100vh;
 }
+
+.ro-permission-error-mask {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
