--- a/ci/src/components/page-table/index.less
+++ b/ci/src/components/page-table/index.less
@@ -4,6 +4,21 @@
   height: 100%;
 }
 
+.ro-page-empty {
+  color: rgb(0 0 0 / 50%);
+  text-align: center;
+
+  a {
+    color: #1890ff;
+    margin: 0 3px;
+    user-select: none;
+
+    &:hover {
+      color: #1890ff;
+    }
+  }
+}
+
 .ro-page-header {
   display: flex;
   border-bottom: 1px solid #eee;
