--- a/ci/src/asset/less/normalize.less
+++ b/ci/src/asset/less/normalize.less
@@ -14,17 +14,24 @@ body {
 
 .g-theme {
   ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: 10px;
+    height: 10px;
+    appearance: none;
+    background-color: #e3e3e3;
   }
 
   ::-webkit-scrollbar-track {
-    background: @main-border-color;
+    background: #e3e3e3;
   }
 
   ::-webkit-scrollbar-thumb {
-    border-radius: 100px;
-    background: @main-light-text-color;
+    border-radius: 10px;
+    border: 2px solid #e3e3e3;
+    background-color: #999;
+
+    &:hover {
+      background-color: rgb(0 0 0 / 55%);
+    }
   }
 
   a {
