--- a/wechat-app/src/pages/profile/component/index.less
+++ b/wechat-app/src/pages/profile/component/index.less
@@ -45,6 +45,11 @@
         border-bottom: none;
       }
 
+      .ro-title {
+        flex-grow: 1;
+        margin-left: 14px;
+      }
+
       .right {
         position: relative;
         left: 24px;
