--- a/wechat-app/src/pages/profile/component/index.less
+++ b/wechat-app/src/pages/profile/component/index.less
@@ -1,4 +1,4 @@
-.ro-profile-container {
+.ro-profile-page {
   color: inherit;
 
   .ro-top-bg {
@@ -59,6 +59,21 @@
           margin-right: 8px;
         }
       }
+    }
+  }
+
+  .ro-logout-btn {
+    width: 356px;
+    height: 84px;
+
+    .ro-logout-text {
+      line-height: 84px;
+    }
+
+    .infoicon {
+      margin-right: 14px;
+      position: relative;
+      top: -5px;
     }
   }
 }
