--- a/ci/src/module/login/component/index.less
+++ b/ci/src/module/login/component/index.less
@@ -36,4 +36,12 @@
       color: #fff;
     }
   }
+
+  .ro-proxy {
+    // position: fixed;
+    // right: 10px;
+    // bottom: 60px;
+    text-align: center;
+    margin-top: 20px;
+  }
 }
