--- a/ci/src/components/page-modal/index.less
+++ b/ci/src/components/page-modal/index.less
@@ -40,7 +40,9 @@
 
     > span {
       width: 40px;
+      height: 40px;
       line-height: 40px;
+      justify-content: center;
       cursor: pointer;
 
       &:hover {
