--- a/ci/src/module/common/header/component/index.less
+++ b/ci/src/module/common/header/component/index.less
@@ -38,6 +38,13 @@
 
   .ro-header-tabs {
     color: rgb(255 255 255 / 90%);
+    flex-grow: 1;
+  }
+
+  .ro-header-operate {
+    margin-right: 35px;
+    color: #fff;
+    cursor: pointer;
   }
 }
 
