--- a/ci/src/asset/less/index.less
+++ b/ci/src/asset/less/index.less
@@ -1,5 +1,5 @@
 @import "./variable";
-@import "antd/dist/antd.less";
+// @import "antd/dist/antd.less";
 @import "./antd.overwrite.less";
 @import "./normalize";
 @import "./global";
