--- a/ci/src/components/page-table/index.less
+++ b/ci/src/components/page-table/index.less
@@ -1,7 +1,7 @@
 .ro-page-table {
   color: inherit;
   padding: 0 10px;
-  height: 100%;
+  height: calc(100vh - 46px - 40px);
 }
 
 .ro-page-empty {
@@ -12,6 +12,7 @@
     color: #1890ff;
     margin: 0 3px;
     user-select: none;
+    cursor: pointer;
 
     &:hover {
       color: #1890ff;
