--- a/ci/src/module/common/main/component/index.less
+++ b/ci/src/module/common/main/component/index.less
@@ -6,7 +6,7 @@
 
   > main {
     flex-grow: 1;
-    background-color: #fff;
+    background-color: #f0f2f5;
     border-radius: 5px;
     padding: 5px 5px 0;
   }
@@ -18,6 +18,7 @@
   > div[class*="-container-module"] {
     height: 100%;
     display: none;
+    background: #fff;
 
     &.active-module {
       display: block;
