--- a/ci/src/components/page-table/index.less
+++ b/ci/src/components/page-table/index.less
@@ -25,6 +25,10 @@
   .ant-spin-spinning {
     max-height: unset !important;
   }
+
+  .ant-table-container {
+    border: 1px solid #cacaca !important;
+  }
 }
 
 .ro-page-empty {
