--- a/test/src/module/echarts/component/index.less
+++ b/test/src/module/echarts/component/index.less
@@ -2,19 +2,18 @@
   color: inherits;
   overflow: hidden;
 
+  --ec-children-light-color: red;
+  --ec-children-arrow: red;
+  --ec-children-triangle-height: 10px;
+  --ec-fold-triangle-height: 15px;
+
   .ec-container-box {
     position: relative;
-    // width: 180px;
-    // height: 90px;
     width: 380px;
     margin: 5px;
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 6px;
-
-    // .ec-container-desc {
-    //   border-radius: 6px;
-    // }
   }
 
   .ec-children-box {
@@ -45,22 +44,45 @@
   }
 
   .ec-fold {
-    // width: 0;
-    // height: 0;
     position: absolute;
     right: 0;
     top: 50%;
-    // transform: translateY(-50%);
     transform: translate(25%, -50%);
-    border: 15px solid transparent;
+    border: var(--ec-fold-triangle-height) solid transparent;
     border-left-color: #999;
     cursor: pointer;
     transform-origin: 25% 50%;
     border-radius: 10px;
+    z-index: 9;
 
     &.is-fold {
-      border-left-color: red;
-      transform: translate(25%, -50%) rotate(90deg);
+      border-left-color: var(--ec-children-light-color);
+      // transform: translate(25%, -50%) rotate(90deg);
+    }
+  }
+
+  .ec-arrow-container {
+    position: absolute;
+    right: calc(var(--ec-fold-triangle-height) / -2);
+    top: 50%;
+    transform: translate(25%, -50%);
+
+    .ec-arrow-right {
+      width: 30px;
+      height: 8px;
+      background: var(--ec-children-light-color);
+      position: relative;
+    }
+
+    // .ec-arrow-rightd::before,
+    .ec-arrow-right::after {
+      content: "";
+      position: absolute;
+      border: var(--ec-children-triangle-height) solid transparent;
+      border-left-color: var(--ec-children-light-color);
+      top: 50%;
+      right: calc(var(--ec-children-triangle-height) * -2);
+      transform: translateY(-50%);
     }
   }
 }
