--- a/test/src/module/common/header/component/index.less
+++ b/test/src/module/common/header/component/index.less
@@ -6,7 +6,7 @@
   position: relative;
   color: rgb(0 0 0 / 85%);
   line-height: 46px;
-  background: #191919;
+  background: #fff;
   user-select: none;
 
   &::after {
@@ -15,7 +15,7 @@
     display: block;
     width: 100%;
     height: 3px;
-    background-color: #3d3d3d;
+    // background-color: #3d3d3d;
     left: 0;
     bottom: 0;
     z-index: 99999;
@@ -43,7 +43,8 @@
 
   .ro-header-operate {
     margin-right: 35px;
-    color: #fff;
+    margin-left: 20px;
+    // color: #fff;
     cursor: pointer;
   }
 }
