--- a/print/src/assets/less/normalize.less
+++ b/print/src/assets/less/normalize.less
@@ -1,5 +1,18 @@
+@font-face {
+  font-family: alimama;
+  src: url("../fonts/Alimama_DongFangDaKai_Regular.woff2") format("woff2");
+  src:
+    url("../fonts/Alimama_DongFangDaKai_Regular.woff2") format("woff2"),
+    url("../fonts/Alimama_DongFangDaKai_Regular.woff") format("woff"),
+    url("../fonts/Alimama_DongFangDaKai_Regular.ttf")  format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   font-size: 12px;
+  /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
+  font-family: alimama;
 }
 
 body {
