[feat]: icon select

--- a/npm-package/icon-libs-react/src/index.less
+++ b/npm-package/icon-libs-react/src/index.less
@@ -25,28 +25,6 @@
     }
   }
 
-  button {
-    align-items: center;
-    border: none;
-    border-radius: 2px;
-    cursor: pointer;
-    display: inline-flex;
-    flex-direction: row;
-    font-size: 14px;
-    justify-content: center;
-    min-height: 30px;
-    padding: 4px 8px;
-    text-align: left;
-    vertical-align: middle;
-    min-width: 60px;
-
-    &.primary {
-      background-color: #2d72d2;
-      box-shadow: inset 0 0 0 1px rgb(17 20 24 / 20%), 0 1px 2px rgb(17 20 24 / 10%);
-      color: #fff;
-    }
-  }
-
   .rove-panel-header {
     padding: 5px;
     position: sticky;
@@ -97,6 +75,28 @@
         0 0 0 1px rgb(33 93 176 / 75.2%),
         inset 0 1px 1px rgb(17 20 24 / 20%);
     }
+  }
+}
+
+button.rove-button {
+  align-items: center;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  display: inline-flex;
+  flex-direction: row;
+  font-size: 14px;
+  justify-content: center;
+  min-height: 30px;
+  padding: 4px 8px;
+  text-align: left;
+  vertical-align: middle;
+  min-width: 60px;
+
+  &.primary {
+    background-color: #2d72d2;
+    box-shadow: inset 0 0 0 1px rgb(17 20 24 / 20%), 0 1px 2px rgb(17 20 24 / 10%);
+    color: #fff;
   }
 }
 
