--- a/npm-package/icon-libs-react/src/index.less
+++ b/npm-package/icon-libs-react/src/index.less
@@ -10,7 +10,7 @@
     cursor: pointer;
     display: inline-flex;
     flex-direction: row;
-    font-size: 14px;
+    font-size: 12px;
     height: 30px;
     justify-content: center;
     padding: 0 24px 0 8px;
@@ -32,6 +32,7 @@
     background-color: #fff;
     display: flex;
     align-items: center;
+    z-index: 20;
 
     &.sticky {
       box-shadow:
@@ -45,6 +46,34 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    position: relative;
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg); /* 起始角度 */
+      }
+
+      to {
+        transform: rotate(360deg); /* 结束角度（一圈） */
+      }
+    }
+
+    .rove-pb-mask {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      //   height: 300px;
+      background-color: #fff;
+      display: flex;
+      padding: 100px;
+      justify-content: center;
+
+      > svg {
+        animation: spin 0.8s linear infinite;
+      }
+    }
   }
 
   .rove-input {
@@ -74,6 +103,24 @@
         inset 0 0 0 1px rgb(33 93 176 / 75.2%),
         0 0 0 1px rgb(33 93 176 / 75.2%),
         inset 0 1px 1px rgb(17 20 24 / 20%);
+    }
+  }
+
+  .rove-search {
+    position: relative;
+
+    input {
+      padding-right: 30px;
+    }
+
+    button {
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-color: #2d72d2;
+      color: #fff;
+      border: none;
     }
   }
 }
