[feat]:【print】更改打印模板

--- a/print/src/assets/less/normalize.less
+++ b/print/src/assets/less/normalize.less
@@ -24,8 +24,8 @@ body {
 
 .g-theme {
   ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+    width: 5px;
+    height: 5px;
     appearance: none;
     background-color: #e3e3e3;
   }
@@ -35,8 +35,8 @@ body {
   }
 
   ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    border: 2px solid #e3e3e3;
+    border-radius: 6px;
+    // border: 1px solid #e3e3e3;
     background-color: #999;
 
     &:hover {
