[feat]:【print】update

--- a/print/src/assets/less/normalize.less
+++ b/print/src/assets/less/normalize.less
@@ -27,20 +27,20 @@ body {
     width: 5px;
     height: 5px;
     appearance: none;
-    background-color: #e3e3e3;
+    background-color: #ffc2c4;
   }
 
   ::-webkit-scrollbar-track {
-    background: #e3e3e3;
+    background: #ffc2c4;
   }
 
   ::-webkit-scrollbar-thumb {
     border-radius: 6px;
     // border: 1px solid #e3e3e3;
-    background-color: #999;
+    background-color: #f9595c;
 
     &:hover {
-      background-color: rgb(0 0 0 / 55%);
+      background-color: #e21317;
     }
   }
 
