--- a/print/src/module/print/print-body/index.less
+++ b/print/src/module/print/print-body/index.less
@@ -1,6 +1,6 @@
 .print-main {
   width: calc(100vw - 24px);
-  height: calc(100vh - 98px);
+  height: calc(100vh - 100px);
   position: relative;
   overflow: auto;
   margin-left: 24px;
@@ -8,19 +8,19 @@
 
 .print-body {
   width: 100%;
-  height: 150vh;
+  height: 135vh;
 
   .print-template {
     position: absolute;
     top: 80px;
     margin-left: 260px;
-    background-color: #ffd7d8;
+    background-color: #fee5e6;
     box-shadow: 0 6px 16px 0 rgb(0 0 0 / 8%), 0 3px 6px -4px rgb(0 0 0 / 12%), 0 9px 28px 8px rgb(0 0 0 / 5%);
 
     //
     background-image:
-      linear-gradient(to right, #ccc 1px, transparent 1px),
-      linear-gradient(to bottom, #ccc 1px, transparent 1px);
+      linear-gradient(to right, #cecece 1px, transparent 1px),
+      linear-gradient(to bottom, #cecece 1px, transparent 1px);
     background-size: 5mm 5mm;
 
     &.a4 {
