--- a/print/src/module/print/main/index.less
+++ b/print/src/module/print/main/index.less
@@ -8,7 +8,8 @@
   display: none;
   width: 20px;
   height: 20px;
-  background-color: red;
+  background-color: transparent;
+  border: 1px solid red;
   position: absolute;
   z-index: 99;
 
