--- a/print/src/module/print/header/index.less
+++ b/print/src/module/print/header/index.less
@@ -33,12 +33,16 @@
 }
 
 .rk-icon-button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 12px;
-  justify-content: center;
-  font-size: 20px;
+  > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 12px;
+    justify-content: center;
+    font-size: 20px;
+    height: 100%;
+    pointer-events: none;
+  }
 
   &.move {
     cursor: move;
