--- a/print/src/module/print/shapes/index.less
+++ b/print/src/module/print/shapes/index.less
@@ -1,6 +1,8 @@
 .print-element {
   position: absolute;
-  border: 1px solid blue;
-  cursor: move;
-  user-select: none;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
 }
